[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Structures/turret.png" type="Texture" id=1]
[ext_resource path="res://src/Turret.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 16 )

[sub_resource type="CircleShape2D" id=4]
radius = 440.0

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "invulnerable"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="Turret" type="StaticBody2D"]
collision_layer = 260
collision_mask = 3
script = ExtResource( 2 )
max_health = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5, -50 )
texture = ExtResource( 1 )

[node name="VisionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRadius"]
shape = SubResource( 4 )

[node name="ShootInterval" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 16 )
anims/invulnerable = SubResource( 15 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[connection signal="body_entered" from="VisionRadius" to="." method="_on_VisionRadius_body_entered"]
[connection signal="body_exited" from="VisionRadius" to="." method="_on_VisionRadius_body_exited"]
[connection signal="timeout" from="ShootInterval" to="." method="_on_ShootInterval_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
